c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_types/incompatible_elem_type_compound_init.c
int main(void)
{
    // invalid implicit conversion of double 1.0 to type int *
    int *arr[3] = {0, 0, 1.0};
}